--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,11 @@ http = { version = "1.0.0", optional = true }
 indicatif = { version = "0.17.5", optional = true }
 num_cpus = { version = "1.15.0", optional = true }
 rand = { version = "0.9", optional = true }
-reqwest = { version = "0.12.2", optional = true, default-features = false, features = ["json", "stream"] }
+reqwest = { version = "0.12.2", optional = true, default-features = false, features = [
+  "json",
+  "stream",
+  "native-tls-vendored",
+] }
 serde = { version = "1", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
 thiserror = { version = "2", optional = true }
