--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ optional = true
 default = ["default-tls", "tokio"]
 # These features are only relevant when used with the `tokio` feature, but this might change in the future.
 default-tls = ["native-tls"]
-native-tls = ["dep:reqwest", "reqwest?/native-tls-vendored", "dep:native-tls", "dep:ureq", "ureq?/native-tls", "ureq?/vendored"]
+native-tls = ["dep:reqwest", "reqwest?/native-tls-vendored", "dep:native-tls", "dep:ureq", "ureq?/native-tls"]
 rustls-tls = ["reqwest?/rustls-tls"]
 tokio = [
   "dep:futures",
